--- a/app/frontend/src/index.css
+++ b/app/frontend/src/index.css
@@ -8,8 +8,8 @@
    --borderColor: #d7d7d7;
    --textColor: #424242;
    --primary: #4bb790;
-   --cardBg: '#ffffff';
-   --tagBg: #d3d1d1;
+   --cardBg: #ffffff;
+   --tagBg: #dcdbdb;
    color-scheme: light;
 }
 
